[package]
name = "clay-viewer"
version = "0.0.2"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "Graphical viewer for Clay - an OpenCL ray tracer"
homepage = "https://github.com/clay-rs/clay-viewer"
repository = "https://github.com/clay-rs/clay-viewer"
readme = "README.md"

keywords = ["ray-tracing", "path-tracing", "opencl"]
categories = ["graphics", "rendering", "multimedia"]

[dependencies]
clay-core = { git = "https://github.com/clay-rs/clay-core.git", rev = "c6e3ce379d6a883917bd2f26d48336c2d679e8de" }
#clay-core = { path = "../clay-core" }

nalgebra = "0.18"
sdl2 = "0.32"
rental = "0.5.4"
image = "0.22.2"
